--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 html{
+  height:100%;
+  width:100%;
   background: url(tree.webp) no-repeat center center fixed;
   -webkit-background-size:cover;
   -moz-background-size:cover;
