--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 
+body{
+  height:100%;
+  width:100%;
+  background: url(tree.webp) no-repeat center center fixed;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover;
+
+}
+#text{
+  font-family: 'Roboto', sans-serif;
+color: red;
+}
