--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
-body,html{
- 
+html{
+  height: 100%;
+ width:100px;
   background: url(tree.webp) no-repeat center center fixed;
   -webkit-background-size:cover;
   -moz-background-size:cover;
