--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 html{
   height: 100%;
- width:100px;
+ width:100%;
   background: url(tree.webp) no-repeat center center fixed;
   -webkit-background-size:cover;
   -moz-background-size:cover;
